<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_PressureSensor" Id="{b68f089e-c16e-4b5b-831f-c18273eab52e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PressureSensor :
(
	NOT_DEFINED := 0,
	MKS500 := 1
) USINT := NOT_DEFINED;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>