<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_GeneralStatus" Id="{1226623c-0516-46f9-ada5-9f334b5ed57e}">
    <Declaration><![CDATA[TYPE ST_GeneralStatus :
STRUCT
	{attribute 'pytmc' := '
		pv: ECAT_DATA_VALID
		io: i
		field: ZNAM NOT_OK
		field: ONAM OK
		field: ZSV MAJOR
		field: OSV NO_ALARM
	'}
	FieldBusDatavalid: BOOL;
	{attribute 'pytmc' := '
		pv: ZERO_EXECUTED
		io: i
		field: ZNAM NOT_EXECUTED
		field: ONAM EXECUTED
		field: ZSV NO_ALARM
		field: OSV NO_ALARM
	'}
	ZeroExecuted : BOOL;
	{attribute 'pytmc' := '
		pv: ECAT_RxBIT
		io: i
		field: ZNAM INVERTED
		field: ONAM NOT_INVERTED
		field: ZSV NO_ALARM
		field: OSV NO_ALARM
	'}
	PingPongRxBit : BOOL;
	{attribute 'pytmc' := '
		pv: PRES_SIM
		io: i
		field: ZNAM OFF
		field: ONAM ON
		field: ZSV NO_ALARM
		field: OSV NO_ALARM
	'}
	PressureSimulation : BOOL;
	{attribute 'pytmc' := '
		pv: PRES_SP_REACHED
		io: i
		field: ZNAM NOT_OK
		field: ONAM OK
		field: ZSV NO_ALARM
		field: OSV NO_ALARM
	'}
	PressureSPReached : BOOL;
	{attribute 'pytmc' := '
		pv: WARN_STATUS
		io: i
		field: ZNAM OK
		field: ONAM NOT_OK
		field: ZSV NO_ALARM
		field: OSV MAJOR
	'}
	WarningsActive : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>