<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_VCN_VAT590" Id="{1cac1206-fd6c-43b8-ae08-593989ed3a26}">
    <Declaration><![CDATA[TYPE ST_VCN_VAT590 :
STRUCT
	(* VCN - Valve Controlled Needle
	Used for VAT590 needle valves *)
	{attribute 'pytmc' := '
    pv: POS_RAW_RBV
	io: i
    '}
	nRawPosition : DINT; //Position readback
	{attribute 'pytmc' := '
    pv: PRES_RAW_RBV
	io: i
    '}
	nRawPressure : DINT; //Pressure readback
	{attribute 'pytmc' := '
    pv: PRES_TORR_RBV
	field: EGU "TORR"
	io: i
    '}
	fPressure : REAL; //Pressure readback in Torr units
	{attribute 'pytmc' := '
	pv: POS_SP_RBV
	io: i
	'}
	nPositionSP : DINT; //Position setpoint readback
	{attribute 'pytmc' := '
	pv: PRES_SP_RBV
	io: i
	'}
	nPressureSP : DINT; //Pressure setpoint readback
	{attribute 'pytmc' := '
    pv: ILK_OK
	field: ZNAM NOT OK
	field: ONAM OK
	io: i
    '}
	bIlkOK : BOOL := FALSE; // Interlock Bit status
	{attribute 'pytmc' := '
    pv: Limit
	io: io
	autosave_pass1: VAL DESC
    '}
	fUpperLimit	: REAL := 100; // Percentage Upper limit on valve open
	{attribute 'pytmc' := '
    pv: PresLimit
	io: io
	autosave_pass1: VAL DESC
    '}
	fPresUpperLimit	: REAL := 1E-2; // Upper limit for pressure control 
	{attribute 'pytmc' := '
	pv: POS_REQ
	field: DRVL 0.0
	field: DRVH 100.0
	io: io
	'}
	fReqPosition : REAL; //Requested position (0.0-100.0%)
	{attribute 'pytmc' := '
	pv: PRES_REQ
	field: EGU "TORR"
	io: io;
	'}
	fReqPressure : REAL; //Requested pressure in Torr units
	{attribute 'pytmc' :=  ' 
	pv: STATE
	io: io
	'}
	eValveControl : E_VCN_VAT590; // Valve control mode
	{attribute 'pytmc' :=  ' 
	pv: CTRL_MODE_RBV
	io: i
	'}
	eControlMode : E_ControlMode; // Valve control mode readback
	{attribute 'pytmc' :=  ' 
	pv: PRES_SENS
	io: io
	'}
	ePressureSensor : E_PressureSensor; // Select pressure sensor
	{attribute 'pytmc' :=  ' 
	pv: REM_CTRL
	io: o
	'}
	eRemoteControl : E_AccessMode; // Select remote control mode
	{attribute 'pytmc' := '
	pv: ZERO
	field: ZNAM NO_OPERATION
	field: ONAM ZERO
	io: o
	'}
	bZero : BOOL; // Activate Zero function bit
	{attribute 'pytmc' :=  ' 
	pv: FATAL_ERR_RBV
	io: i
	'}
	eFatalErrors : E_FatalErrors; // Valve Fatal Error status readback
	{attribute 'pytmc' :=  ' 
	pv: GEN_STATUS
	io: i
	'}
	stGenStatus : ST_GeneralStatus; // Valve General status
	{attribute 'pytmc' :=  ' 
	pv: GEN_WARN
	io: i
	'}
	stGenWarnings : ST_GeneralWarnings; // Valve General Warnings status
	{attribute 'pytmc' :=  ' 
	pv: EXT_WARN
	io: i
	'}
	stExtWarnings : ST_ExtendedWarnings; // Valve Extended Warnings status	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>